Revise portfolio content and services section
Updated personal description and project details in the portfolio. Added web development services to the services section.

--- a/index1.html
+++ b/index1.html
@@ -239,7 +239,7 @@
     <div class="container hero-content">
       <div class="hero-text">
         <h2>Hi, I'm <span>Syed Taha Fatmi</span></h2>
-        <p>A Web Developer, Data Analyst, and AI/ML Enthusiast</p>
+        <p>An AI/ML Enthusiast and Data Analyst</p>
         <a href="#contact" class="btn">Hire Me</a>
       </div>
       <div class="hero-img">
@@ -252,27 +252,20 @@
     <div class="container">
       <h2>About Me</h2>
       <p>
-        I'm passionate about building efficient web applications and intelligent data-driven solutions. 
-        My experience covers front-end development, data analysis, and AI/ML model creation.
+        I'm passionate about building efficient intelligent data-driven solutions and automate workflows through AI. 
+        My experience covers Data Analytics, AI/ML model creation and front-end development.
       </p>
       <div class="skills">
-        <div><strong>Web Development:</strong> HTML, CSS, JavaScript, React, Tailwind</div>
         <div><strong>Data Science:</strong> Python, Pandas, NumPy, Matplotlib</div>
         <div><strong>AI/ML:</strong> Scikit-learn, TensorFlow, NLP, Recommendation Systems</div>
+        <div><strong>Web Development:</strong> HTML, CSS, JavaScript, React, Tailwind</div>
+
       </div>
     </div>
   </section>
 
   <section id="projects" class="projects">
-    <div class="container">
-      <h2>Projects</h2>
-      <div class="project-grid">
-        <div class="project-card">
-          <img src="images/project1.jpg" alt="3D Portfolio Website">
-          <h3>3D Portfolio Website</h3>
-          <p>Interactive 3D portfolio with smooth animations and modern design.</p>
-          <a href="https://taha-portfolio-ten.vercel.app" target="_blank">View Project</a>
-        </div>
+ 
         <div class="project-card">
           <img src="images/project2.jpg" alt="AI Paper Recommender">
           <h3>Research Paper Recommendation System</h3>
@@ -285,6 +278,15 @@
           <p>Visual dashboard built with Python and Power BI for analytics insights.</p>
           <a href="#" target="_blank">View Code</a>
         </div>
+       <div class="container">
+      <h2>Projects</h2>
+      <div class="project-grid">
+        <div class="project-card">
+          <img src="images/project1.jpg" alt="3D Portfolio Website">
+          <h3>3D Portfolio Website</h3>
+          <p>Interactive 3D portfolio with smooth animations and modern design.</p>
+          <a href="https://taha-portfolio-ten.vercel.app" target="_blank">View Project</a>
+        </div>
       </div>
     </div>
   </section>
@@ -293,17 +295,17 @@
     <div class="container">
       <h2>Services</h2>
       <div class="service-grid">
-        <div class="service-card">
-          <h3>Web Development</h3>
-          <p>Responsive websites and full-stack web apps built for performance and impact.</p>
-        </div>
-        <div class="service-card">
+         <div class="service-card">
           <h3>Data Analytics</h3>
           <p>Data visualization, cleaning, and analysis for actionable business insights.</p>
         </div>
         <div class="service-card">
           <h3>AI & Machine Learning</h3>
           <p>Predictive models, automation tools, and smart systems for businesses.</p>
+        </div>
+          <div class="service-card">
+          <h3>Web Development</h3>
+          <p>Responsive websites and full-stack web apps built for performance and impact.</p>
         </div>
       </div>
     </div>
@@ -320,9 +322,9 @@
         <button type="submit" class="btn">Send Message</button>
       </form>
       <div class="socials">
-        <a href="https://linkedin.com" target="_blank">LinkedIn</a>
-        <a href="https://github.com" target="_blank">GitHub</a>
-        <a href="mailto:your.email@example.com">Email</a>
+        <a href="www.linkedin.com/in/taha-fatmi" target="_blank">LinkedIn</a>
+        <a href="https://github.com/tahafatmi1" target="_blank">GitHub</a>
+        <a href="tahafatmi689@gmail.com">Email</a>
         <a href="https://fiverr.com" target="_blank">Fiverr</a>
         <a href="https://upwork.com" target="_blank">Upwork</a>
       </div>
